# kungfu_demo

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  data_consumer.cpp  data_consumer.h  journal_replayer.cpp  live_reader.cpp  utils.cpp  verify_journal_time.cpp  verify_nanotime.cpp
1min_kbar/: REPORT_2026-03-17.md  compare_ht_1m.py  compare_jq_1m.py  generate_1m_kbar.py  generate_1m_kbar_ht.py
archive_journal/: CMakeLists.txt  setup_parquet.sh
archive_journal/src/: conversion.cpp  conversion.h  data_types.h  journal_reader.h  main.cpp  parquet_writer.cpp
archive_journal_demo/: CMakeLists.txt  setup_parquet.sh
archive_journal_demo/docs/: data_format.md  deploy_guide.md
archive_journal_demo/src/: conversion.cpp  conversion.h  data_types.h  journal_reader.cpp  l2_types.h  main.cpp  parquet_writer.cpp  parquet_writer.h
demo_project/: CMakeLists.txt  README.md  data  example_factor.cpp  insight_types.cpp  insight_types.h  journal_replayer.cpp  utils.cpp  utils.h
demo_project/scripts/: run_all.sh  start_paged.sh  start_replayer.sh  stop_paged.sh
docs/: L2行情数据与Journal系统.md  compile_project.md  insight_gateway_overview.md  insight_gateway_write_flow.md  journal_data_reading.md  journal_data_write_read.md  journal_write_architecture.md  kbar_builder.md  kungfu_getNanoTime_bug.md  mmap_and_concurrency.md  monitor_latency_guide.md  paged_quick_start.md  paged_usage_guide.md  production_ops_guide.md  replay_guide.md  streaming_parquet_replay.md  week_report_linwei_0306.md  weekly_report_linwei_0306.md  weekly_report_linwei_0313.md  weekly_report_linwei_0320.md  weekly_report_linwei_0327.md  行情数据链路与乱序分析.md
docs/archive_journal/: data_format.md  deploy_guide.md
docs/realtime_parquet/: realtime_parquet_guide.md
docs/superpowers/plans/: 2026-03-28-realtime-factors-v1.md
include/ACE_Wrappers/ace/: GNUmakefile  GNUmakefile.ACE  Stream_Modules.h:Zone.Identifier
include/ACE_Wrappers/ace/Compression/: GNUmakefile  GNUmakefile.ACE_Compression
include/ACE_Wrappers/ace/Compression/rle/: GNUmakefile  GNUmakefile.ACE_RLECompression
include/ACE_Wrappers/ace/ETCL/: GNUmakefile  GNUmakefile.ACE_ETCL  GNUmakefile.ACE_ETCL_Parser
include/ACE_Wrappers/ace/FlReactor/: GNUmakefile  GNUmakefile.ACE_FlReactor
include/ACE_Wrappers/ace/Monitor_Control/: GNUmakefile  GNUmakefile.Monitor_Control
include/ACE_Wrappers/ace/QtReactor/: GNUmakefile  GNUmakefile.ACE_Qt4Reactor
include/ACE_Wrappers/ace/SSL/: GNUmakefile  GNUmakefile.SSL
include/ACE_Wrappers/ace/TkReactor/: GNUmakefile  GNUmakefile.ACE_TkReactor
include/ACE_Wrappers/ace/XtReactor/: GNUmakefile  GNUmakefile.ACE_XtReactor
include/mdc_gateway_client/protobuf/: ADOrderbookSnapshot.pb.cc  ADOrderbookSnapshot.pb.h  MDCfetsBenchmark.pb.cc  MDCfetsBenchmark.pb.h  MDCfetsBondDeal.pb.cc  MDCfetsBondDeal.pb.h  MDCfetsBondSnapshot.pb.cc  MDCfetsBondSnapshot.pb.h  MDCfetsCurrencyDeal.pb.cc  MDCfetsCurrencyDeal.pb.h  MDCfetsCurrencySnapshot.pb.cc  MDCfetsCurrencySnapshot.pb.h  MDCfetsRateDeal.pb.cc  MDCfetsRateDeal.pb.h  MDCfetsRateSnapshot.pb.cc  MDCfetsRateSnapshot.pb.h  MDSecurityLending.pb.cc  MDSecurityLending.pb.h  ServiceDiscovery.pb.cc  ServiceDiscovery.pb.h
monitor_latency/: CMakeLists.txt
monitor_latency/scripts/: start_monitor.sh
monitor_latency/src/: main.cpp
realtime_factors/: CMakeLists.txt  README.md  claude_design.md  claude_factor_v1_design.md  demo_backfill_ht2.py  gemini_design.md  gpt_design.md
realtime_factors/docs/: impl_v1.md
realtime_factors/include/: bucket_classify.h  event_types.h  factor_schema.h  moments.h  order_state.h  symbol_state.h  time_utils.h  ts_engine.h
realtime_factors/scripts/: check_output.py
realtime_factors/src/: main.cpp  order_state.cpp  ts_engine.cpp
realtime_factors/tests/: test_bucket.cpp  test_moments.cpp  test_order_state.cpp  test_time_utils.cpp
realtime_kbar/: CMakeLists.txt  README.md  setup_parquet.sh  third_party
realtime_kbar/docs/: design.md  tick_push_analysis.md
realtime_kbar/src/: data_types.h  jq_comparator.cpp  jq_comparator.h  kbar_offline.cpp  kbar_realtime.cpp  parquet_reader.cpp  parquet_reader.h  tick_bar_builder.cpp  tick_bar_builder.h
realtime_parquet/: CMakeLists.txt  setup_parquet.sh  third_party
realtime_parquet/docs/: realtime_parquet_guide.md
realtime_parquet/src/: data_types.h  kbar_builder.cpp  kbar_builder.h  main.cpp  minute_writer.cpp  minute_writer.h
scripts/: cleanup_old_data.py  compare_jq_ht_tick.py  replay  run_all.sh  start_paged.sh  start_reader.sh  start_replayer.sh  stop_paged.sh  verify_nanotime_fix.sh
src/: data_consumer.cpp  data_consumer.h  data_struct.hpp  insight_types.cpp  insight_types.h  sys_messages.h  utils.h
tests/: replay_parquet_test.cpp
tools/: journal_replayer.cpp  live_reader.cpp  replay_support.cpp  replay_support.hpp
